restified api and added two delete options
changed api to be more rest conform.
removed ids from api.
added delete option for actuator and owner.
